salesforce/force-app/main/default/objects/Land_Registry_Batch__c/Land_Registry_Batch__c.object-meta.xml
<CustomObject>
    <description>Represents a batch of Land Registry compliance checks uploaded from V+ CSV export</description>
    <label>Land Registry Batch</label>
    <nameField>
        <displayFormat>BATCH-{0000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land Registry Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>