salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When processing completed</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>