salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Count__c</fullName>
    <description>Number of failed or no match records</description>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>