salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Matched_Count__c.field-meta.xml
<CustomField>
    <fullName>Matched_Count__c</fullName>
    <description>Number of successful matches</description>
    <label>Matched Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>