salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Processed_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Count__c</fullName>
    <description>Number of records processed so far</description>
    <label>Processed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>