salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percent__c</fullName>
    <description>Percentage of records processed</description>
    <formula>IF(Total_Records__c &gt; 0, (Processed_Count__c / Total_Records__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>