salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>When processing started</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>