salesforce/force-app/main/default/objects/Land_Registry_Batch__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <description>When the CSV was uploaded to Salesforce</description>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>