salesforce/force-app/main/default/objects/Land_Registry_Batch__c/listViews/All_Batches.listView-meta.xml
<ListView>
    <fullName>All_Batches</fullName>
    <columns>NAME</columns>
    <columns>Upload_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Processed_Count__c</columns>
    <columns>Matched_Count__c</columns>
    <columns>Failed_Count__c</columns>
    <columns>Progress_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batches</label>
</ListView>