salesforce/force-app/main/default/objects/Land_Registry_Batch__c/listViews/Recent_Batches.listView-meta.xml
<ListView>
    <fullName>Recent_Batches</fullName>
    <columns>NAME</columns>
    <columns>Upload_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Progress_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Upload_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Batches (Last 30 Days)</label>
</ListView>